@@ -13,7 +13,7 @@
 	 <_description>Chess training. Catch the computer's pawns.</_description>
 	 <_prerequisite>Mouse-manipulation</_prerequisite>
 	 <_goal></_goal>
-	 <_manual></_manual>
+	 <_manual>At the start, each player (one controlling the white pieces, the other controlling the black pieces) controls sixteen pieces: one king, one queen, two rooks, two knights, two bishops, and eight pawns. The object of the game is to checkmate the opponent's king, whereby the king is under immediate attack (in "check") and there is no way to remove it from attack on the next move.</_manual>
 	 <_credit>The chess engine is from gnuchess.</_credit>
   </Board>
 </GCompris>
